Revision history for ParaSeq

{{$NEXT}}

0.0.10  2024-06-06T16:14:31+02:00
    - Re-imagine the handling of "last", by exporting a "last"
      subroutine.  Added Caveat as to the limitations this brings.
    - Updated status of ".deepmap" and added tests
    - Updated status of ".duckmap" and added tests
    - Updated status of ".nodemap" and added tests
    - Updated status of ".flatmap"

0.0.9  2024-06-04T14:40:13+02:00
    - Updated status of ".map", added support for
      phasers and added many more tests

0.0.8  2024-06-01T14:49:20+02:00
    - Added Theory of operation section in documentation
    - Updated status of ".sort" and added tests
    - Updated status of ".collate" and added tests
    - Updated status of ".combinations" and added tests
    - Updated status of ".flat" and added tests
    - Updated status of ".invert" and added tests
    - Updated status of ".permutations" and added tests
    - Updated status of ".produce" and added tests
    - Updated status of ".slice" and added tests
    - Updated status of ".snip" and added tests
    - Updated status of ".skip" and added more tests
    - Updated status of ".snitch" and added tests
    - Updated status of ".toggle" and added tests

0.0.7  2024-05-30T14:24:50+02:00
    - Added optimized ".batch" and tests
    - Added partially optimized ".rotor" and tests
    - Updated status of ".eager" and added tests
    - Updated status of ".serial" and added tests
    - Updated status of ".rotate" and added tests
    - Updated status of ".values" and added tests
    - Added partially optimized ".max" and tests
    - Added partially optimized ".min" and tests
    - Added partially optimized ".maxpairs" and tests
    - Added partially optimized ".minpairs" and tests
    - Added optimized ".minmax" and tests
    - Removed "Status" from all of the endpoint methods
      as they now all have their final implmentation

0.0.6  2024-05-28T20:46:35+02:00
    - Added ".list" coercer